// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Controlled 1`] = `
<ds-field>
  <label for="textfield-controlled">
    Beskriv bekymringen din
  </label>
  <textarea
    id="textfield-controlled"
    autocomplete="off"
    rows="4"
    style="<removed>"
  >
  </textarea>
</ds-field>
<button
  data-variant="secondary"
  type="button"
>
  Tøm feltet
</button>
`;

exports[`Disabled 1`] = `
<ds-field>
  <label for="textarea-disabled">
    Disabled Textarea
  </label>
  <textarea
    id="textarea-disabled"
    disabled
    autocomplete="off"
    style="<removed>"
  >
  </textarea>
</ds-field>
`;

exports[`Focused 1`] = `
<ds-field>
  <label for="my-textarea">
    Label
  </label>
  <textarea
    rows="3"
    cols="20"
    id="my-textarea"
    autocomplete="off"
    style="<removed>"
  >
  </textarea>
</ds-field>
`;

exports[`Full Width 1`] = `
<ds-field>
  <label for="my-textarea">
    Beskriv bekymringen din
  </label>
  <textarea
    id="my-textarea"
    autocomplete="off"
    style="<removed>"
  >
  </textarea>
</ds-field>
`;

exports[`Preview 1`] = `
<ds-field>
  <label for="my-textarea">
    Label
  </label>
  <textarea
    rows="3"
    cols="20"
    id="my-textarea"
    autocomplete="off"
    style="<removed>"
  >
  </textarea>
</ds-field>
`;

exports[`Read Only 1`] = `
<ds-field>
  <label for="textarea-readonly">
    Read-Only Textarea
  </label>
  <textarea
    id="textarea-readonly"
    readonly
    autocomplete="off"
    style="<removed>"
  >
  </textarea>
</ds-field>
`;
